# YouTube-API-to-Database-Pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
config/: channels.json  database.yaml  pipeline.yaml
config/monitoring/grafana/dashboards/: pipeline.yml
config/monitoring/grafana/datasources/: postgres.yml
database/: init.sql  schema.md
docs/: Monitoring and Alerts.md  api_reference.md  debugging.md  getting help.md  setup.md  troubleshooting.md
examples/: basic_usage.py  custom_queries.sql  scheduled_pipeline.py
src/scripts/: backup_database.py  run_pipeline.py  setup_database.py
src/youtube_pipeline/: __init__.py
src/youtube_pipeline/extract/: auth_manager.py  rate_limiter.py  youtube_client.py
src/youtube_pipeline/load/: database_manager.py  schema_manager.py
src/youtube_pipeline/monitor/: alert_manager.py  pipeline_monitor.py
src/youtube_pipeline/transform/: data_enricher.py  data_transformer.py  data_validator.py  quality_checker.py
src/youtube_pipeline/utils/: config_loader.py  helpers.py  logger.py
tests/: teset_database_manager.py  test_data_transformer.py  test_youtube_client.py
